Separate webcontent from nav bar 100px

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,10 +7,11 @@
 	</head>
 	</head>
 	<body>
-		<div class="container-fluid">
+		<% include nav %>
+		<div class="container-fluid" style="margin-top: 100px">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-					<% include nav %>
+					
 				</div>
 			</div>
 			<div class="row">
