fix field place

--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -172,7 +172,7 @@
 							<tr>
 								<td>Quốc gia(*): </td>
 								<td>
-									<select class="select-box" ng-model="quocGia" title="{{tooltips[32]}}" name="quocGia" required>
+									<select class="select-box" ng-model="data.quocGia" title="{{tooltips[32]}}" name="quocGia" required>
 										<option value="VietNam">Việt Nam</option>
 									</select>
 								</td>
