--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -136,7 +136,7 @@
 						<tr>
 							<td>Quốc gia(*): </td>
 							<td>
-								<select class="select-box" ng-model="quocGia" title="{{tooltips[24]}}" name="quocGia" required>
+								<select class="select-box" ng-model="data.quocGia" title="{{tooltips[24]}}" name="quocGia" required>
 									<option value="VietNam">Việt Nam</option>
 								</select>
 							</td>
@@ -144,7 +144,7 @@
 						<tr>
 							<td>Tỉnh/Thành phố(*): </td>
 							<td>
-								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
+								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 								</select>
 							</td>
@@ -152,22 +152,22 @@
 						<tr>
 							<td>Huyện(*):</td>
 							<td>
-								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.huyen" ng-change="districtChange()">
-									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
+								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
+									<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
 							<td>Xã(*): </td>
 							<td>
-								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="xa" required>
-									<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
+								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="data.xa" required>
+									<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
 							<td>Thôn/Xóm: </td>
-							<td><input type="text" ng-model="thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
+							<td><input type="text" ng-model="data.thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
 						</tr>
 					</table>
 					</td>
