--- a/views/config.ejs
+++ b/views/config.ejs
@@ -15,7 +15,110 @@
 		<div style="margin-top: 100px">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-4 col-lg-offset-2">
+					<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-4 col-lg-offset-1">
+						<div class="panel-group" id="accordion">
+							<div class="panel panel-primary panel-shadow">
+								<div class="panel-heading">
+									<h4 class="panel-title">
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm cấp</a>
+									</h4>
+								</div>
+								<div id="collapse1" class="panel-collapse collapse in">
+									<div class="panel-body">
+										<form action="/config/roles" method="post" id="form-add-role">
+											<div class="row">
+												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+													<input type="text" name="rolename" id="rolename" placeholder="Tên" class="form-control" />
+												</div>
+											</div>
+											<div class="row" style="margin-top: 10px">
+												<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-top: 10px">
+													<label>Quản lý mẫu:</label>
+												</div>
+												<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 block" style="padding-left: 0px">
+													<select name="side" id="select-new-role" class="form-control">
+														<% for(var i in cores.resources) { %>
+															<option value="<%= i %>"><%= cores.resources[i].resourceName %></option>
+														<% } %>
+													</select>
+												</div>
+											</div>
+
+											<div class="row">
+												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
+													<label>Các quyền:</label>
+												</div>
+											</div>
+											
+											<div class="row">
+												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
+													<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px;">
+														<ul class="list-group">
+																<li class="list-group-item">
+																	<input name="view" type="checkbox"> 
+																	<span> Xem </span>
+																</li>
+															
+																<li class="list-group-item">
+																	<input name="create" type="checkbox"> 
+																	<span> Thêm </span>
+																</li>
+															
+														</ul>
+													</div>
+													<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px; padding-right: 0px;">
+														<ul class="list-group">
+																<li class="list-group-item">
+																	<input name="edit" type="checkbox"> 
+																	<span> Sửa </span>
+																</li>
+															
+																<li class="list-group-item">
+																	<input name="delete" type="checkbox"> 
+																	<span> Xóa </span>
+																</li>
+															
+														</ul>
+													</div>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+													<a class="btn btn-success btn-block" onclick="addRole()">Thêm</a>
+												</div>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-danger panel-shadow-danger">
+								<div class="panel-heading">
+									<h4 class="panel-title">
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Xóa cấp</a>
+									</h4>
+								</div>
+								<div id="collapse2" class="panel-collapse collapse">
+									<div class="panel-body">
+										<form id="form-delete-role" action="/config/roles/delete" method="post">
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px;">
+													<select id="select-delete-role" name="deleteRole" class="form-control">
+														<% for(var j = 0; j < roles.length; j++) {
+															if (roles[j].role != 'admin') { %>
+																<option value="<%= roles[j].role %>"><%= roles[j].rolename %></option>
+															<% }
+														} %>
+													</select>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-right: 0px;">
+												<a class="btn btn-danger btn-block" style="margin-top: 0px;" onclick="deleteRole()">Xóa</a>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-5">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3 class="panel-title">Tài khoản</h3>
@@ -74,109 +177,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-4">
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-primary panel-shadow">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm cấp</a>
-								</h4>
-							</div>
-							<div id="collapse1" class="panel-collapse collapse in">
-								<div class="panel-body">
-									<form action="/config/roles" method="post" id="form-add-role">
-										<div class="row">
-											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-												<input type="text" name="rolename" id="rolename" placeholder="Tên" class="form-control" />
-											</div>
-										</div>
-										<div class="row" style="margin-top: 10px">
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-top: 10px">
-												<label>Quản lý mẫu:</label>
-											</div>
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 block" style="padding-left: 0px">
-												<select name="side" id="select-new-role" class="form-control">
-													<% for(var i in cores.resources) { %>
-														<option value="<%= i %>"><%= cores.resources[i].resourceName %></option>
-													<% } %>
-												</select>
-											</div>
-										</div>
-
-										<div class="row">
-											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
-												<label>Các quyền:</label>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
-												<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px;">
-													<ul class="list-group">
-															<li class="list-group-item">
-																<input name="view" type="checkbox"> 
-																<span> Xem </span>
-															</li>
-														
-															<li class="list-group-item">
-																<input name="create" type="checkbox"> 
-																<span> Thêm </span>
-															</li>
-														
-													</ul>
-												</div>
-												<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px; padding-right: 0px;">
-													<ul class="list-group">
-															<li class="list-group-item">
-																<input name="edit" type="checkbox"> 
-																<span> Sửa </span>
-															</li>
-														
-															<li class="list-group-item">
-																<input name="delete" type="checkbox"> 
-																<span> Xóa </span>
-															</li>
-														
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-												<a class="btn btn-success btn-block" onclick="addRole()">Thêm</a>
-											</div>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-danger panel-shadow-danger">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Xóa cấp</a>
-								</h4>
-							</div>
-							<div id="collapse2" class="panel-collapse collapse">
-								<div class="panel-body">
-									<form id="form-delete-role" action="/config/roles/delete" method="post">
-										<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-left: 0px;">
-												<select id="select-delete-role" name="deleteRole" class="form-control">
-													<% for(var j = 0; j < roles.length; j++) {
-														if (roles[j].role != 'admin') { %>
-															<option value="<%= roles[j].role %>"><%= roles[j].rolename %></option>
-														<% }
-													} %>
-												</select>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="padding-right: 0px;">
-											<a class="btn btn-danger btn-block" style="margin-top: 0px;" onclick="deleteRole()">Xóa</a>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 				</div>
 				
 			</div>
@@ -260,6 +260,14 @@
 			}
 
 			function deleteRole () {
+
+				var select = ob('select-delete-role');
+				var selectedOption = select.children[select.selectedIndex];
+				// console.log(option);
+
+				if (!confirm('Xóa cấp "' + selectedOption.innerHTML + '", mọi tài khoản được phân vào cấp này sẽ mất quyền thao tác với mẫu dữ liệu do cấp này quản lý.\n\nThao tác này là không thể phục hồi.\n\nXác nhận xóa?')){
+					return;
+				}
 				
 				var fd = new FormData(document.getElementById('form-delete-role'));
 				$.ajax({
