--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -288,7 +288,7 @@
 				<td><input type="file" ng-model="data.taiLieuPhanTich" multiple title="{{tooltips[55]}}" name="taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 			</tr>
 			<tr>
-				<td><label>38. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span>span></label></td>
+				<td><label>38. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td>
 				<td><input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" valid-file required class="input-form"></td>
 			</tr>
 			<tr>
@@ -527,7 +527,7 @@
 			</tr>
 		</table>
 		</div>
-		<center><button style="margin-top: 30px;" type="submit" class="btn btn-success btn-lg">Thêm mẫu</button></center>
+		<center><button style="margin-top: 30px;" id="add-post" type="submit" class="btn btn-success btn-lg">Thêm mẫu</button></center>
 	</form>
 	
 </div>
