--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -106,7 +106,7 @@
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"  required></td>
+					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -232,7 +232,7 @@
 				</tr>
 				<tr>
 					<td><label>29. Bản đồ:</label></td>
-					<td><input type="file" title="{{tooltips[42]}}" name="banDo" ng-model="data.banDo" class="input-form" required></td>
+					<td><input type="file" title="{{tooltips[42]}}" name="banDo" ng-model="data.banDo" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>30. Thông tin khác:</label></td>
@@ -290,7 +290,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
 					<td><label>41. Ảnh mẫu vật  <span class="has-required">(*)</span>:</label></td>
-					<td><input type="file" multiple title="{{tooltips[54]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" required></td>
+					<td><input type="file" multiple title="{{tooltips[54]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" valid-file required></td>
 				</tr>
 				<tr>
 					<td><label>42. Hình ảnh mẫu ngoài thực địa:</label></td>
