--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,8 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-					<h2 class="text-success">Bấm <a href="/app">Nhập liệu</a> để nhập liệu</h2>
-					<h5 class="text-danger">Nếu sau khi bấm vào liên kết trên, bạn được chuyển hướng lại chính trang này, liên hệ chủ nhiệm đề tài để cập nhật quyền hạn cho tài khoản của bạn.</h5>
+					<h2 class="text-success">Bấm vào các nút tương ứng bên trên để nhập liệu</h2>
+					<h5 class="text-danger">Nếu sau khi bấm, form nhập liệu không hiện ra, liên hệ chủ nhiệm đề tài để cập nhật quyền hạn cho tài khoản của bạn.</h5>
 				</div>
 			</div>
 		</div>
