--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -14,31 +14,39 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<% if (typeof(user) != 'undefined') { %>
-			<ul class="nav navbar-nav">
-				<% if ((typeof(path) != 'undefined') && !(path.localeCompare('/app'))) { %>
-					<li class="active"><a href="/app">Nhập liệu</a></li>
-				<% } else { %>
-					<li><a href="/app">Nhập liệu</a></li>
-				<% } %>
+				<ul class="nav navbar-nav">
+					<!--<% if ((typeof(path) != 'undefined') && !(path.localeCompare('/app'))) { %>
+						<li class="active"><a href="/app">Nhập liệu</a></li>
+					<% } else { %>
+						<li><a href="/app">Nhập liệu</a></li>
+					<% } %>
 
-				<% if (typeof(path) != 'undefined' && !path.localeCompare('/config')) { %>
-					<li class="active"><a href="/config">Cài đặt</a></li>
-				<% } else { %>
-					<li><a href="/config">Cài đặt</a></li>
-				<% } %>
+					<% if (typeof(path) != 'undefined' && !path.localeCompare('/config')) { %>
+						<li class="active"><a href="/config">Cài đặt</a></li>
+					<% } else { %>
+						<li><a href="/config">Cài đặt</a></li>
+					<% } %>
 
-				<% if (typeof(path) != 'undefined' && !path.localeCompare('/log/')) { %>
-					<li class="active"><a href="/log">Lịch sử</a></li>
-				<% } else { %>
-					<li><a href="/log">Lịch sử</a></li>
-				<% } %>
-			</ul>
+					<% if (typeof(path) != 'undefined' && !path.localeCompare('/log/')) { %>
+						<li class="active"><a href="/log">Lịch sử</a></li>
+					<% } else { %>
+						<li><a href="/log">Lịch sử</a></li>
+					<% } %>-->
+					<li><a href="/app/#!/dong-vat">Động vật</a></li>
+					<li><a href="/app/#!/thuc-vat">Thực vật</a></li>
+					<li><a href="/app/#!/dia-chat">Địa chất</a></li>
+					<li><a href="/app/#!/tho-nhuong">Thổ nhưỡng</a></li>
+					<li><a href="/app/#!/co-sinh">Cổ sinh</a></li>
+				</ul>
 			<% } %>
 		<% if (user) { %>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= user.fullname %> </a>
 					<ul class="dropdown-menu">
+						<li><a href="/log">Lịch sử</a></li>
+						<li><a href="/app/#!/bai-dang">Quản lý bài đăng</a></li>
+						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
